// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ibBTC Mint can apply max balance 1`] = `
<div>
  <div
    class="MuiGrid-root-3 MuiGrid-container-4"
  >
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-106 WithStyles(ForwardRef(Grid))-root-107 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <p
        class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111 MuiTypography-colorTextSecondary-135"
      >
        Balance: 
        5.000000
      </p>
    </div>
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-139 WithStyles(ForwardRef(Grid))-root-140 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <div
        class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49 MuiGrid-grid-sm-5-56"
      >
        <div
          class="MuiInputBase-root-142 WithStyles(ForwardRef(InputBase))-root-141"
        >
          <input
            autocomplete="off"
            class="MuiInputBase-input-153"
            inputmode="decimal"
            maxlength="79"
            minlength="1"
            pattern="^[0-9]*[.,]?[0-9]*$"
            placeholder="0.000"
            spellcheck="false"
            style="text-align: right;"
            type="text"
            value="5"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-160 WithStyles(ForwardRef(Grid))-root-161 MuiGrid-container-4 MuiGrid-spacing-xs-1-26 MuiGrid-item-5 MuiGrid-grid-xs-12-49 MuiGrid-grid-sm-7-58"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5"
        >
          <button
            class="MuiButtonBase-root-191 MuiButton-root-162 MuiButton-outlined-167 MuiButton-outlinedSizeSmall-179 MuiButton-sizeSmall-183"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-163"
            >
              max
            </span>
            <span
              class="MuiTouchRipple-root-220"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5"
        >
          <button
            aria-label="token options"
            class="MuiButtonBase-root-191 MuiButton-root-162 MuiButton-outlined-167 makeStyles-selectButton-199 MuiButton-outlinedSizeSmall-179 MuiButton-sizeSmall-183"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-163"
            >
              <div
                class="makeStyles-tokenContainer-201"
              >
                <img
                  alt="bcrvRenBTC icon"
                  class="makeStyles-tokenIcon-196"
                  src="/assets/icons/bcrvrenbtc.png"
                />
                <div
                  class="MuiTypography-root-109 MuiTypography-body1-111"
                >
                  bcrvRenBTC
                </div>
              </div>
              <span
                class="MuiButton-endIcon-187 MuiButton-iconSizeSmall-188"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-202"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root-220"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-align-items-xs-center-12 MuiGrid-grid-xs-12-49"
  >
    <svg
      class="makeStyles-arrowDown-211"
      fill="none"
      height="18"
      viewBox="0 0 13 18"
      width="13"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M6.5 15.2138L11.6295 10L13 11.3931L6.5 18L-6.08938e-08 11.3931L1.37054 10L6.5 15.2138Z"
        fill="white"
        fill-rule="evenodd"
      />
      <line
        stroke="white"
        stroke-width="2"
        x1="6.5"
        x2="6.5"
        y1="16"
        y2="4.37114e-08"
      />
    </svg>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-container-4"
  >
    <div
      class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <p
        class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-212 WithStyles(ForwardRef(Typography))-root-213 MuiTypography-body1-111 MuiTypography-colorTextSecondary-135"
      >
        Balance: 
        10.000000
      </p>
    </div>
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-214 WithStyles(ForwardRef(Grid))-root-215 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <div
        class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49 MuiGrid-grid-sm-9-60 MuiGrid-grid-md-12-77 MuiGrid-grid-lg-10-89"
      >
        <h1
          class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-216 WithStyles(ForwardRef(Typography))-root-217 MuiTypography-h1-114"
        >
          11.988000
        </h1>
      </div>
      <div
        class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-218 WithStyles(ForwardRef(Grid))-root-219 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-grid-xs-12-49 MuiGrid-grid-sm-3-54 MuiGrid-grid-md-12-77 MuiGrid-grid-lg-2-81"
      >
        <div
          class="makeStyles-tokenContainer-201"
        >
          <img
            alt="ibBTC icon"
            class="makeStyles-tokenIcon-196"
            src="/assets/icons/ibbtc.png"
          />
          <div
            class="MuiTypography-root-109 MuiTypography-body1-111"
          >
            ibBTC
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
  >
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-230"
    >
      <div
        class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-justify-content-xs-space-between-23 MuiGrid-grid-xs-12-49"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <h6
            class="MuiTypography-root-109 MuiTypography-subtitle1-120"
          >
            Current Conversion Rate: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <p
            class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111"
          >
            1 
            bcrvRenBTC
             :
             
            1.024385
             
            ibBTC
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-justify-content-xs-space-between-23 MuiGrid-grid-xs-12-49"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <h6
            class="MuiTypography-root-109 MuiTypography-subtitle1-120"
          >
            Fees: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <p
            class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111"
          >
            <span
              class=""
              title="Mint Fee: 0%"
            >
              0.012000
               
              ibBTC
            </span>
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-justify-content-xs-space-between-23 MuiGrid-grid-xs-12-49"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <h6
            class="MuiTypography-root-109 MuiTypography-subtitle1-120"
          >
            Total Mint Amount: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <p
            class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111"
          >
            11.988000 ibBTC
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
  >
    <button
      class="MuiButtonBase-root-191 MuiButton-root-162 MuiButton-contained-170 MuiButton-containedPrimary-171 MuiButton-containedSizeLarge-182 MuiButton-sizeLarge-184 MuiButton-fullWidth-185"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-163"
      >
        MINT
      </span>
      <span
        class="MuiTouchRipple-root-220"
      />
    </button>
  </div>
</div>
`;

exports[`ibBTC Mint can change token 1`] = `
<div>
  <div
    class="MuiGrid-root-3 MuiGrid-container-4"
  >
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-106 WithStyles(ForwardRef(Grid))-root-107 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <p
        class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111 MuiTypography-colorTextSecondary-135"
      >
        Balance: 
        10.000000
      </p>
    </div>
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-139 WithStyles(ForwardRef(Grid))-root-140 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <div
        class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49 MuiGrid-grid-sm-5-56"
      >
        <div
          class="MuiInputBase-root-142 WithStyles(ForwardRef(InputBase))-root-141"
        >
          <input
            autocomplete="off"
            class="MuiInputBase-input-153"
            inputmode="decimal"
            maxlength="79"
            minlength="1"
            pattern="^[0-9]*[.,]?[0-9]*$"
            placeholder="0.000"
            spellcheck="false"
            style="text-align: right;"
            type="text"
            value="10"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-160 WithStyles(ForwardRef(Grid))-root-161 MuiGrid-container-4 MuiGrid-spacing-xs-1-26 MuiGrid-item-5 MuiGrid-grid-xs-12-49 MuiGrid-grid-sm-7-58"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5"
        >
          <button
            class="MuiButtonBase-root-191 MuiButton-root-162 MuiButton-outlined-167 MuiButton-outlinedSizeSmall-179 MuiButton-sizeSmall-183"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-163"
            >
              max
            </span>
            <span
              class="MuiTouchRipple-root-220"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5"
        >
          <button
            aria-label="token options"
            class="MuiButtonBase-root-191 MuiButton-root-162 MuiButton-outlined-167 makeStyles-selectButton-199 MuiButton-outlinedSizeSmall-179 MuiButton-sizeSmall-183"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-163"
            >
              <div
                class="makeStyles-tokenContainer-201"
              >
                <img
                  alt="renBTC icon"
                  class="makeStyles-tokenIcon-196"
                  src="/assets/icons/renbtc.png"
                />
                <div
                  class="MuiTypography-root-109 MuiTypography-body1-111"
                >
                  renBTC
                </div>
              </div>
              <span
                class="MuiButton-endIcon-187 MuiButton-iconSizeSmall-188"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-202"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root-220"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-285 WithStyles(ForwardRef(Grid))-root-286 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-align-items-xs-center-12 MuiGrid-grid-xs-12-49"
    >
      <p
        class="MuiTypography-root-109 MuiTypography-body1-111 MuiTypography-colorTextSecondary-135"
      >
        Max slippage:
      </p>
      <div
        aria-label="slippage-percentage"
        class="MuiFormGroup-root-289 ForwardRef(RadioGroup)-root-287 ForwardRef(RadioGroup)-root-288"
        role="radiogroup"
      >
        <label
          class="MuiFormControlLabel-root-291"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-191 MuiIconButton-root-306 PrivateSwitchBase-root-302 MuiRadio-root-297 MuiRadio-colorPrimary-300 MuiIconButton-colorPrimary-310"
          >
            <span
              class="MuiIconButton-label-314"
            >
              <input
                class="PrivateSwitchBase-input-305"
                name="slippage-percentage"
                type="radio"
                value="0.5"
              />
              <div
                class="PrivateRadioButtonIcon-root-315"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-202"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-202 PrivateRadioButtonIcon-layer-316"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root-220"
            />
          </span>
          <span
            class="MuiTypography-root-109 MuiFormControlLabel-label-296 MuiTypography-body1-111"
          >
            0.5%
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root-291"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root-191 MuiIconButton-root-306 PrivateSwitchBase-root-302 MuiRadio-root-297 MuiRadio-colorPrimary-300 PrivateSwitchBase-checked-303 MuiRadio-checked-298 MuiIconButton-colorPrimary-310"
          >
            <span
              class="MuiIconButton-label-314"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input-305"
                name="slippage-percentage"
                type="radio"
                value="1"
              />
              <div
                class="PrivateRadioButtonIcon-root-315 PrivateRadioButtonIcon-checked-317"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-202"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-202 PrivateRadioButtonIcon-layer-316"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root-220"
            />
          </span>
          <span
            class="MuiTypography-root-109 MuiFormControlLabel-label-296 MuiTypography-body1-111"
          >
            1%
          </span>
        </label>
      </div>
      <div
        class="MuiInputBase-root-142 MuiOutlinedInput-root-318 MuiInputBase-adornedEnd-147 MuiOutlinedInput-adornedEnd-323"
      >
        <input
          autocomplete="off"
          class="MuiInputBase-input-153 MuiOutlinedInput-input-328 makeStyles-customSlippage-1 MuiInputBase-inputAdornedEnd-158 MuiOutlinedInput-inputAdornedEnd-332"
          inputmode="decimal"
          maxlength="79"
          minlength="1"
          pattern="^[0-9]*[.,]?[0-9]*$"
          spellcheck="false"
          style="text-align: right;"
          type="text"
          value=""
        />
        <div
          class="MuiInputAdornment-root-333 MuiInputAdornment-positionEnd-336"
        >
          <p
            class="MuiTypography-root-109 MuiTypography-body1-111 MuiTypography-colorTextSecondary-135"
          >
            %
          </p>
        </div>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root-340 MuiOutlinedInput-notchedOutline-327"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend-341"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-align-items-xs-center-12 MuiGrid-grid-xs-12-49"
  >
    <svg
      class="makeStyles-arrowDown-211"
      fill="none"
      height="18"
      viewBox="0 0 13 18"
      width="13"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M6.5 15.2138L11.6295 10L13 11.3931L6.5 18L-6.08938e-08 11.3931L1.37054 10L6.5 15.2138Z"
        fill="white"
        fill-rule="evenodd"
      />
      <line
        stroke="white"
        stroke-width="2"
        x1="6.5"
        x2="6.5"
        y1="16"
        y2="4.37114e-08"
      />
    </svg>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-container-4"
  >
    <div
      class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <p
        class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-212 WithStyles(ForwardRef(Typography))-root-213 MuiTypography-body1-111 MuiTypography-colorTextSecondary-135"
      >
        Balance: 
        10.000000
      </p>
    </div>
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-214 WithStyles(ForwardRef(Grid))-root-215 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <div
        class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49 MuiGrid-grid-sm-9-60 MuiGrid-grid-md-12-77 MuiGrid-grid-lg-10-89"
      >
        <h1
          class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-216 WithStyles(ForwardRef(Typography))-root-217 MuiTypography-h1-114"
        >
          11.988000
        </h1>
      </div>
      <div
        class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-218 WithStyles(ForwardRef(Grid))-root-219 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-grid-xs-12-49 MuiGrid-grid-sm-3-54 MuiGrid-grid-md-12-77 MuiGrid-grid-lg-2-81"
      >
        <div
          class="makeStyles-tokenContainer-201"
        >
          <img
            alt="ibBTC icon"
            class="makeStyles-tokenIcon-196"
            src="/assets/icons/ibbtc.png"
          />
          <div
            class="MuiTypography-root-109 MuiTypography-body1-111"
          >
            ibBTC
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
  >
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-230"
    >
      <div
        class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-justify-content-xs-space-between-23 MuiGrid-grid-xs-12-49"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <h6
            class="MuiTypography-root-109 MuiTypography-subtitle1-120"
          >
            Current Conversion Rate: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <p
            class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111"
          >
            1 
            renBTC
             :
             
            0.992518
             
            ibBTC
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-justify-content-xs-space-between-23 MuiGrid-grid-xs-12-49"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <h6
            class="MuiTypography-root-109 MuiTypography-subtitle1-120"
          >
            Fees: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <p
            class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111"
          >
            <span
              class=""
              title="Mint Fee: 0%"
            >
              0.012000
               
              ibBTC
            </span>
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-justify-content-xs-space-between-23 MuiGrid-grid-xs-12-49"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <h6
            class="MuiTypography-root-109 MuiTypography-subtitle1-120"
          >
            Total Mint Amount: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <p
            class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111"
          >
            11.988000 ibBTC
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
  >
    <button
      class="MuiButtonBase-root-191 MuiButton-root-162 MuiButton-contained-170 MuiButton-containedPrimary-171 MuiButton-containedSizeLarge-182 MuiButton-sizeLarge-184 MuiButton-fullWidth-185"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-163"
      >
        MINT
      </span>
      <span
        class="MuiTouchRipple-root-220"
      />
    </button>
  </div>
</div>
`;

exports[`ibBTC Mint displays output ibBTC when mint amount is inputted 1`] = `
<div>
  <div
    class="MuiGrid-root-3 MuiGrid-container-4"
  >
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-106 WithStyles(ForwardRef(Grid))-root-107 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <p
        class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111 MuiTypography-colorTextSecondary-135"
      >
        Balance: 
        5.000000
      </p>
    </div>
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-139 WithStyles(ForwardRef(Grid))-root-140 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <div
        class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49 MuiGrid-grid-sm-5-56"
      >
        <div
          class="MuiInputBase-root-142 WithStyles(ForwardRef(InputBase))-root-141"
        >
          <input
            autocomplete="off"
            class="MuiInputBase-input-153"
            inputmode="decimal"
            maxlength="79"
            minlength="1"
            pattern="^[0-9]*[.,]?[0-9]*$"
            placeholder="0.000"
            spellcheck="false"
            style="text-align: right;"
            type="text"
            value="12"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-160 WithStyles(ForwardRef(Grid))-root-161 MuiGrid-container-4 MuiGrid-spacing-xs-1-26 MuiGrid-item-5 MuiGrid-grid-xs-12-49 MuiGrid-grid-sm-7-58"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5"
        >
          <button
            class="MuiButtonBase-root-191 MuiButton-root-162 MuiButton-outlined-167 MuiButton-outlinedSizeSmall-179 MuiButton-sizeSmall-183"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-163"
            >
              max
            </span>
            <span
              class="MuiTouchRipple-root-220"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5"
        >
          <button
            aria-label="token options"
            class="MuiButtonBase-root-191 MuiButton-root-162 MuiButton-outlined-167 makeStyles-selectButton-199 MuiButton-outlinedSizeSmall-179 MuiButton-sizeSmall-183"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-163"
            >
              <div
                class="makeStyles-tokenContainer-201"
              >
                <img
                  alt="bcrvRenBTC icon"
                  class="makeStyles-tokenIcon-196"
                  src="/assets/icons/bcrvrenbtc.png"
                />
                <div
                  class="MuiTypography-root-109 MuiTypography-body1-111"
                >
                  bcrvRenBTC
                </div>
              </div>
              <span
                class="MuiButton-endIcon-187 MuiButton-iconSizeSmall-188"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-202"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root-220"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-align-items-xs-center-12 MuiGrid-grid-xs-12-49"
  >
    <svg
      class="makeStyles-arrowDown-211"
      fill="none"
      height="18"
      viewBox="0 0 13 18"
      width="13"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M6.5 15.2138L11.6295 10L13 11.3931L6.5 18L-6.08938e-08 11.3931L1.37054 10L6.5 15.2138Z"
        fill="white"
        fill-rule="evenodd"
      />
      <line
        stroke="white"
        stroke-width="2"
        x1="6.5"
        x2="6.5"
        y1="16"
        y2="4.37114e-08"
      />
    </svg>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-container-4"
  >
    <div
      class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <p
        class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-212 WithStyles(ForwardRef(Typography))-root-213 MuiTypography-body1-111 MuiTypography-colorTextSecondary-135"
      >
        Balance: 
        10.000000
      </p>
    </div>
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-214 WithStyles(ForwardRef(Grid))-root-215 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <div
        class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49 MuiGrid-grid-sm-9-60 MuiGrid-grid-md-12-77 MuiGrid-grid-lg-10-89"
      >
        <h1
          class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-216 WithStyles(ForwardRef(Typography))-root-217 MuiTypography-h1-114"
        >
          11.988000
        </h1>
      </div>
      <div
        class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-218 WithStyles(ForwardRef(Grid))-root-219 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-grid-xs-12-49 MuiGrid-grid-sm-3-54 MuiGrid-grid-md-12-77 MuiGrid-grid-lg-2-81"
      >
        <div
          class="makeStyles-tokenContainer-201"
        >
          <img
            alt="ibBTC icon"
            class="makeStyles-tokenIcon-196"
            src="/assets/icons/ibbtc.png"
          />
          <div
            class="MuiTypography-root-109 MuiTypography-body1-111"
          >
            ibBTC
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
  >
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-230"
    >
      <div
        class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-justify-content-xs-space-between-23 MuiGrid-grid-xs-12-49"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <h6
            class="MuiTypography-root-109 MuiTypography-subtitle1-120"
          >
            Current Conversion Rate: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <p
            class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111"
          >
            1 
            bcrvRenBTC
             :
             
            1.024385
             
            ibBTC
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-justify-content-xs-space-between-23 MuiGrid-grid-xs-12-49"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <h6
            class="MuiTypography-root-109 MuiTypography-subtitle1-120"
          >
            Fees: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <p
            class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111"
          >
            <span
              class=""
              title="Mint Fee: 0%"
            >
              0.012000
               
              ibBTC
            </span>
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-justify-content-xs-space-between-23 MuiGrid-grid-xs-12-49"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <h6
            class="MuiTypography-root-109 MuiTypography-subtitle1-120"
          >
            Total Mint Amount: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <p
            class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111"
          >
            11.988000 ibBTC
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
  >
    <button
      class="MuiButtonBase-root-191 MuiButton-root-162 MuiButton-contained-170 MuiButton-containedPrimary-171 MuiButton-containedSizeLarge-182 MuiButton-sizeLarge-184 MuiButton-fullWidth-185"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-163"
      >
        MINT
      </span>
      <span
        class="MuiTouchRipple-root-220"
      />
    </button>
  </div>
</div>
`;
